# Improc

./: .gitignore  CMakeLists.txt
res/GLShaders/: RenderQuad.frag  RenderQuad.vert
src/: CMakeLists.txt  CommonIncludes.hpp  Front.cpp  MainWindow.cpp  MainWindow.hpp
src/GL_View3D/: GL_View3D.cpp  GL_View3D.hpp
src/GL_View3D/GL_Engine/: GL_Material.cpp  GL_Material.hpp  GL_Mesh.cpp  GL_Mesh.hpp  GL_Object3D.cpp  GL_Object3D.hpp  GL_Renderer.cpp  GL_Renderer.hpp  GL_Scene.hpp  GL_Shader.cpp  GL_Shader.hpp  GL_Texture.hpp  GL_Util.cpp  GL_Util.hpp
src/Image/: ImProc.h  ImProcTypes.h  Image.cpp  Image.h  Maths.h  ProcessingStack.cpp  ProcessingStack.h  maths.cpp
src/Image/Processes/: ColorProcess.cpp  ColorProcess.h  LoadImageProcess.cpp  LoadImageProcess.h  SpatialProcess.cpp  SpatialProcess.h
src/Maths/: VectorMaths.cpp  VectorMaths.h
src/NodeEditor/: Connection.cpp  Connection.h  NodeEditor.cpp  NodeEditor.h  NodeEditorScene.cpp  NodeEditorScene.h  NodeMenu.cpp  NodeMenu.h
src/NodeEditor/Nodes/: BaseNodes.cpp  BaseNodes.hpp  ImageNodes.cpp  ImageNodes.hpp  Node.cpp  Node.h  OperationNodes.cpp  OperationNodes.hpp
src/SidePanel/: BaseProcessWidget.cpp  BaseProcessWidget.hpp  SidePanel.cpp  SidePanel.hpp
src/SidePanel/CurveEditor/: ControlPoint.cpp  ControlPoint.h  CurveEditor.cpp  CurveEditor.h  CurveEditorScene.cpp  CurveEditorScene.h
src/SidePanel/Processes/ColorArithmetic/: AddColorFromPaletteProcessWidget.cpp  AddColorFromPaletteProcessWidget.hpp  DivideColorFromPaletteProcessWidget.cpp  DivideColorFromPaletteProcessWidget.hpp  MultiplyColorFromPaletteProcessWidget.cpp  MultiplyColorFromPaletteProcessWidget.hpp  SubtractColorFromPaletteProcessWidget.cpp  SubtractColorFromPaletteProcessWidget.hpp
src/SidePanel/Processes/ImageFileArithmetic/: AddImageWidget.cpp  AddImageWidget.hpp  DivideImageWidget.cpp  DivideImageWidget.hpp  MaxImageWidget.cpp  MaxImageWidget.hpp  MinImageWidget.cpp  MinImageWidget.hpp  MultiplyImageWidget.cpp  MultiplyImageWidget.hpp  SubtractImageWidget.cpp  SubtractImageWidget.hpp
src/SidePanel/Processes/Spatial/: SpatialProcessWidget.cpp  SpatialProcessWidget.hpp
